Fix anchor alignment issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,7 @@ a {
   text-decoration: none;
   cursor: pointer;
   opacity: 0.6;
+  display: block;
 
   &:hover {
     opacity: 1;
